# Socrates

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SYSTEM_BUILD_AND_DEPLOY_PLAYBOOK.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
content/: site_automation_state.json
deploy/nginx/: ixinxiang.xyz.conf
docs/: architecture.md  index.md
examples/: blog_post.yaml  content_calendar.yaml  linkedin_long_post.yaml  value_prop.yaml
scripts/: deploy_site.sh  install_daily_content_cron.sh  run_daily_site_automation.sh
site/: app.js  docs.html  faq.html  index.html  manifest.webmanifest  product.html  robots.txt  sitemap.xml  styles.css  use-cases.html
site/zh/: docs.html  faq.html  index.html  product.html  use-cases.html
src/socrates/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py  pipeline.py  presets.py  router.py  site_automation.py
src/socrates/prompts/: __init__.py  content.py
src/socrates/providers/: __init__.py  base.py  openai_compatible.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_openai_compatible.py  test_presets.py  test_router.py  test_site_automation.py
